tests/ui/feature-gates/feature-gate-impl-trait-in-bindings.rs
fn main() {
    let x: impl Sized = ();
    //~^ ERROR `impl Trait` is not allowed in the type of variable bindings
}
